# callback

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BRIEF.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  EPICS.md  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  setup.py
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release-please.yml
callback/: __init__.py  apply_graph.py  apply_nodes.py  bridge.py  cli.py  extractor.py  jd_data.py  jd_fetcher.py  observability.py  plugin_install.py  preferences.py  profile_graph.py  profile_nodes.py  profilecompiler.py  scorer.py  section_map.py  server.py  state.py  version_check.py  wiki.py  wikirenderer.py
callback/render/: __init__.py  resume_template.html.j2
callback/repository/: accomplishments.py  preferences.py  resumes.py
commands/: apply-to-job.md  onboard-profile.md  review-job-application.md  scan-job-leads.md  setup-job-automation.md  tailor-resume.md
docs/: architecture.html
docs/retros/: 2026-06-11-callback-v1-rename-migration.md
docs/superpowers/plans/: 2026-05-06-docstring-uninstall-readme.md  2026-06-11-scoring-redesign.md  2026-06-22-cross-harness-plugin.md  2026-06-22-search-preferences.md  2026-06-23-profile-prefs-wiring.md  2026-07-13-codex-marketplace-install.md
docs/superpowers/specs/: 2026-06-22-search-preferences-design.md  2026-06-23-profile-prefs-wiring-design.md  2026-07-09-or-groups-and-atomic-extraction-design.md
pi_apply/: __init__.py  _build_info.py  apply_graph.py  apply_nodes.py  bridge.py  cli.py  extractor.py  jd_data.py  jd_fetcher.py  observability.py  profile_graph.py  profile_nodes.py  profilecompiler.py  scorer.py  section_map.py  server.py  state.py  version_check.py  wiki.py  wikirenderer.py
pi_apply/render/: __init__.py  html_builder.py  resume_template.html.j2  resume_template.typ  typst_builder.py
pi_apply/repository/: accomplishments.py  resumes.py
scripts/: build-version.sh  check_expected_objects.py  check_spaghetti.py  smoke_apply.py  smoke_profile.py
skills/apply-to-job/: SKILL.md
skills/auto-job-apply/: SKILL.md
skills/init/: SKILL.md
skills/onboard-profile/: SKILL.md
skills/review-job-application/: SKILL.md
skills/scan-job-leads/: SKILL.md
skills/setup-callback/: SKILL.md
skills/setup-job-automation/: SKILL.md
skills/tailor-resume/: SKILL.md
tests/: conftest.py  test_apply_e2e.py  test_apply_e2e_jd.py  test_apply_graph.py  test_apply_nodes.py  test_bridge.py  test_check_spaghetti.py  test_cli.py  test_codex_marketplace_manifest.py  test_extractor.py  test_extractor_sections.py  test_integration_marker.py  test_jd_data.py  test_jd_fetch_node.py  test_jd_fetcher.py  test_observability.py  test_plugin_install.py  test_preferences.py  test_profile_graph.py  test_profile_integration.py  test_profile_nodes.py  test_profilecompiler.py  test_render.py  test_render_vendor.py  test_repository_accomplishments.py  test_repository_preferences.py  test_repository_resumes.py  test_score_roundtrip.py  test_scorer.py  test_scoring_engine.py  test_section_map.py  test_server.py  test_server_profile.py  test_state.py  test_submit_tailor.py  test_version_check.py  test_wiki.py  test_wikirenderer.py
tests/fixtures/: sample_jd.txt  sample_resume.txt
(+22 files in other folders)
