[project]
name = "pi-apply"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7,<0.8",
    "fastmcp>=3.2.4",
    "fpdf2>=2.8.7",
    "langchain-core>=1.3.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pdfplumber>=0.11.0",
    "pydantic>=2.13.3",
    "python-docx>=1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0.3",
]
