[project]
name = "callback"
version = "1.1.0"
description = "ATS-honest resume tailoring: a LangGraph MCP server that scores, tailors, and renders job applications"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7,<0.8",
    "dataclass-wizard>=0.39.1",
    "httpx>=0.27",
    "fastmcp>=3.2.4",
    "jinja2>=3.1",
    "langchain-core>=1.3.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.8.0",
    "pdfplumber>=0.11.0",
    "rapidfuzz>=3.0",
    "pydantic>=2.13.3",
    "pypdf>=4.0",
    "python-docx>=1.1.0",
    "rich>=13.9",
    "typer>=0.15",
]

[project.scripts]
callback = "callback.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["callback*"]

[tool.setuptools.package-data]
"callback.render" = ["*.html.j2", "fonts/*.ttf"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C90"]

[tool.ruff.lint.pylint]
max-branches = 8
max-statements = 20
max-args = 4

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration",
    "local: marks tests that require local-only tools or filesystem paths",
]
